--- a/hrc.html
+++ b/hrc.html
@@ -62,7 +62,7 @@
 									<br /><b>Methods Used: </b>Contextual Interviews, Journey Mapping, Usability Testing, Wireframing, Prototyping
 									<br /><b>Tools Used: </b>Sketch, Invision
 									<br /><b>Platform: </b>RFID Wristband and Sensors, iPad Application, Website
-									<br /><b>Group Members: </b>Bria Fowler, Serena Mistry, Tim Salau
+									<br /><b>Group Members: </b>Bria Fowler, Dixie Hamilton, Serena Mistry, Tim Salau
 									<br /><b>Project Duration: </b>Sep. 2017 - Present (In Progress)
 									<br />
 									<br />
@@ -150,15 +150,15 @@
 								</section>	
 									We visited the HRC to better understand the space and the Weekender archetype. We observed visitors and I performed intercept interviews with five people who appeared to fit the Weekender description. Separately from the HRC visit, I also spoke with several avid museum-goers who shared insights on interactive exhibits they had experienced. Several stories from these interviews informed our concept design:
 									<ul>
-										<li>One woman did not want to use a phone-based solution because did not she would not be distracted by other notifications.</li>
-										<li>Another person had ignored phone-based interactive elements at museums in the past because she wanted to remain immersed in the exhibit.</li>
-										<li>One person shared that she enjoys sharing object she enjoyed at museums with friends.</li>
+										<li>One woman did not want to use a phone-based solution because she would not be distracted by other notifications</li>
+										<li>Another person had ignored phone-based interactive elements at museums in the past because she wanted to remain immersed in the exhibit</li>
+										<li>One person shared that she likes to share objects she enjoyed at museums with friends</li>
 									</ul>
 									From these insights we created a journey map for Bill, the Weekender, and focused on several potential pain points. Bill wants:
 									<ul>
 										<li>More information about objects to learn as much as possible</li>
-										<li>Exhibit items that are engaging, interactive, and inspiring.</li>
-										<li>To remember what he saw and learned after leaving the museum.</li>
+										<li>Exhibit items that are engaging, interactive, and inspiring</li>
+										<li>To remember what he saw and learned after leaving the museum</li>
 										<li>To be able to share experience with friends/family not in attendance</li>
 									</ul>
 								<section class="tiles">
@@ -191,14 +191,14 @@
 									</article>
 								</section>	
 									<b>Ideation and Prototyping</b>
-									<p>With our journey map and pain points for the Weekender in mind, we were inspired by Disney's Magic Band to use a wristband as the means for visitor interaction. A RFID-enabled wristband could enable a visitor to interact with the exhibit while not being distracted by a smartphone or other device. Additionally, the HRC could provide iPads at selected objects so users can engage with augmented reality experiences and fun, interactive quizzes based on the exhibit topic. 
+									<p>With our journey map and pain points for the Weekender in mind, we were inspired by Disney's Magic Band to use a wristband as the means for visitor interaction. An RFID-enabled wristband could enable a visitor to interact with the exhibit while not being distracted by a smartphone or other device. Additionally, the HRC could provide iPads at selected objects so users can engage with augmented reality experiences and fun, interactive quizzes based on the exhibit topic. 
 									<br />
 									Our solution incorporates the wristband, an app for the exhibit's iPads, and a website for visitors to retrieve their bookmarked items. I sketched the initial concept for the iPad app, and Serena Mistry mocked up initial wireframes for testing.</p>
 							<!--		Our solution focused on key interactions provided by the wristband that would address the Weekender's pain points:
 										<ul>
-											<li>Ability to bookmark exhibit items to obtain more detailed information about them later.</li>
-											<li>Ability to share information about your favorite items with friends and family without having to take pictures.</li>
-											<li>Interaction with augmented reality and interactive quizzes via iPads provides a more engaging experience than the exhibit objects alone (of which most are printed materials).</li>
+											<li>Ability to bookmark exhibit items to obtain more detailed information about them later</li>
+											<li>Ability to share information about your favorite items with friends and family without having to take pictures</li>
+											<li>Interaction with augmented reality and interactive quizzes via iPads provides a more engaging experience than the exhibit objects alone (of which most are printed materials)</li>
 										</ul>
 							-->
 								<section class="tiles">
@@ -232,7 +232,7 @@
 								</section>	
 									<b>User Testing</b>
 									<br />
-									Given the short timeframe for this project, we only had a few days to initiate and complete one round of user testing on our low fidelity mockups. We used a convenience sample of four fellow students in the School of Information for our testing. While we had hoped to obtain between five and eight testers, we proceeded with four testers to we would have time to iterate on the feedback.
+									Given the short timeframe for this project, we only had a few days to initiate and complete one round of user testing on our low fidelity mockups. We used a convenience sample of four fellow students in the School of Information for our testing. While we had hoped to obtain between five and eight testers, we proceeded with four testers so we would have time to iterate on the feedback.
 									<br />
 									We set up a couple of mock exhibit items in an empty hallway and walked participants through our "museum experience".
 									<br />
@@ -268,17 +268,17 @@
 								</section>
 									Even our low fidelity museum experience resulted in participants providing valuable insights. While all four participants understood and liked the concept of bookmarking items to learn more about them later, other potential issues were uncovered:
 									<ul>
-										<li>The word "Pin" as a descriptor for bookmarking favorite objects was confusing to some participants.</li>
-										<li>The button/device for bookmarking objects needs to be placed at a height that is accessible for most people, including visitors in wheelchairs.</li>
-										<li>The button/device for bookmarking objects needs to provide visitors with "feedback" to show that the item has been successfully bookmarked.</li>
+										<li>The word "Pin" as a descriptor for bookmarking favorite objects was confusing to some participants</li>
+										<li>The button/device for bookmarking objects needs to be placed at a height that is accessible for most people, including visitors in wheelchairs</li>
+										<li>The button/device for bookmarking objects needs to provide visitors with "feedback" to show that the item has been successfully bookmarked</li>
 									</ul>
 									<h2>Results</h2>
-									We presented our concept to students at the School of Architecture who are working on a related project to design the actual exhibit. We received very positive feedback, and they especially liked a few aspects of our concept:
+									We presented our concept to students at the School of Architecture who are working on a related project to design the actual exhibit. We received very positive feedback, and they especially liked these aspects of our concept:
 										<ul>
-											<li>The wristband is accessible for everyone in that visitors are not required to have a smartphone and the ability to download an app.</li>
-											<li>The bookmarking of objects via the wristband would provide the HRC with a wealth of data to help them understand the parts of the exhibit visitors enjoyed most.</li>
-											<li>The HRC could provide additional information about the exhibit and objects after someone's visit, including related items that were not able to be obtained for the exhibit and suggesting future exhibits to attend based on the items they bookmarked.</li>
-											<li>The ability to bookmark objects could lessen the amount of visitors taking photographs of objects (flash photography is not allowed.</li>
+											<li>The wristband is accessible for everyone in that visitors are not required to have a smartphone and the ability to download an app</li>
+											<li>The bookmarking of objects via the wristband would provide the HRC with a wealth of data to help them understand the parts of the exhibit that visitors enjoyed most</li>
+											<li>The HRC could provide additional information about the exhibit and objects after someone's visit, including related items that were not able to be obtained for the exhibit and suggesting future exhibits to attend based on the items they bookmarked</li>
+											<li>The ability to bookmark objects could lessen the number of visitors taking photographs of objects (flash photography is not allowed)</li>
 										</ul>
 								<h2>Next Steps</h2>
 									We are currently finalizing our iPad app prototype and completing a video to demonstrate the wristband experience. 
