--- a/park.html
+++ b/park.html
@@ -59,7 +59,7 @@
 									<h2>Project Overview</h2>
 									<b>Methods Used: </b>Questionnaires, Literature Review, Interviews
 									<br /><b>Tools Used: </b>TBD
-									<br /><b>Group Members: </b>Bria Fowler, Eric Graham, Serena Mistry
+									<br /><b>Group Members: </b>Bria Fowler, Eric Graham, Dixie Hamilton, Serena Mistry
 									<br /><b>Project Duration: </b>Oct. 2017 - Present (In Progress)
 									<br />
 									<br />
@@ -76,7 +76,7 @@
 									</span>
 									<i>Concept video created by Eric Graham</i>
 									<br />
-									While our concept video used the classic Pacman game since it was quick to incorporate, our actual app will include more collaborative games and activities that will allow people to create things together in order to create a sense of mutual goals and community.
+									While our concept video used the classic Pacman game since it was quick to incorporate, our actual app will include more collaborative games and activities that will allow people to create things together in order to develop a sense of mutual goals and community.
 									<br />
 									<br />
 									<h2>Our Process</h2>
@@ -116,10 +116,10 @@
 									<br />
 									We chose our app to be location-based in public parks for several reasons:
 									<ul>
-										<li>It brings people together in a concentrated area so they can form in-person connections as well as virtual connections.</li>
-										<li>Being outside contributes to mental and physical health and parks create a feeling of community.</li>
-										<li>Almost 70% of people in the country's 100 biggest cities live within a 10 minute walk of a park; we hope to increase utilization of these existing spaces.</li>
-										<li>While previous AR apps like Pokemon Go were popular, our app will remove some of its problematic elements (crowds gathering outside of private residences, players not paying attention while crossing streets, etc.</li>
+										<li>It brings people together in a concentrated area so they can form in-person connections as well as virtual connections</li>
+										<li>Being outside contributes to mental and physical health and parks create a feeling of community</li>
+										<li>Almost 70% of people in the country's 100 biggest cities live within a 10 minute walk of a park; we hope to increase utilization of these existing spaces</li>
+										<li>While previous AR apps like Pokemon Go were popular, our app will remove some of its problematic elements (crowds gathering outside of private residences, players not paying attention while crossing streets, etc.)</li>
 									</ul>
 									<h2>Next Steps</h2>
 									<p>Over the next two months we will be designing a questionnaire and analyzing the results, performing interviews, creating a journey map, prototyping, testing and iterating.
