--- a/charterschool.html
+++ b/charterschool.html
@@ -63,7 +63,7 @@
 									<br />
 									<br />
 									<h2>The Problem</h2>
-									The finance department at KIPP Austin Public Schools ("KAPS") works with budget managers of over 20 schools and departments to help them crate and manage their departments' budgets. It is difficult for the budget managers, most of whom don't have a finance background, to understand and correctly use the templates and reports created by the finance team. This can lead to mistakes, inefficiences, and departments going over budget.
+									The finance department at KIPP Austin Public Schools ("KAPS") works with budget managers of over 20 schools and departments to help them create and manage their departments' budgets. It is difficult for the budget managers, most of whom don't have a finance background, to understand and correctly use the templates and reports created by the finance team. This can lead to mistakes, inefficiencies, and departments going over budget.
 									<br />
 									<br />
 									<h2>My Task</h2>
