--- a/hrc.html
+++ b/hrc.html
@@ -59,7 +59,7 @@
 							<span class="image main"><img src="images/IMG_20170917_144220.vr.jpg" alt="" data-action="zoom"/></span>
 									<h2>Project Overview</h2>
 									<b>Role: </b>UX Researcher
-									<br /><b>Methods Used: </b>Contextual Interviews, Journey Mapping, Usability Testing, Wireframing, Prototyping
+									<br /><b>Methods Used: </b>Intercepts, Journey Mapping, Usability Testing, Wireframing, Prototyping
 									<br /><b>Tools Used: </b>Sketch, Invision
 									<br /><b>Platform: </b>RFID Wristband and Sensors, iPad Application, Website
 									<br /><b>Group Members: </b>Bria Fowler, Dixie Hamilton, Serena Mistry, Tim Salau
@@ -76,9 +76,9 @@
 									<br />
 									<h2>Our Solution</h2>
 									We developed a multi-faceted solution that provides interactive elements while ensuring visitors are not unnecessarily distracted by technology. 
-									<ul><li>Each visitor receives an RFID wristband that allows them to "bookmark" objects to learn more about them later.</li>
-										<li>An application on dedicated iPads provides augmented reality and interactive activities that can be personalized via the visitors' wristbands.</li>
-										<li>After leaving the HRC, visitors will receive an emailed link to a personalized website with more information about the items they "bookmarked".</li>
+									<ul><li>Each visitor receives an RFID wristband that allows them to "bookmark" objects to learn more about them later</li>
+										<li>An application on dedicated iPads provides augmented reality and interactive activities that can be personalized via the visitors' wristbands</li>
+										<li>After leaving the HRC, visitors will receive an emailed link to a personalized website with more information about the items they "bookmarked"</li>
 									</ul>
 									<b>Visitor Journey Incorporating Wristband Concept</b>
 									<div class="value-img">
