--- a/park.html
+++ b/park.html
@@ -57,9 +57,11 @@
 							<h2>Augmented Reality App</h2>
 							<span class="image main"><img src="images/park header.png" alt="" /></span>
 									<h2>Project Overview</h2>
+									<b>My Role: </b> UX Researcher
+									<br /><b>Group Members: </b>Bria Fowler, Eric Graham, Serena Mistry									
 									<b>Methods Used: </b>Questionnaires, Literature Review, Interviews
-									<br /><b>Tools Used: </b>TBD
-									<br /><b>Group Members: </b>Bria Fowler, Eric Graham, Dixie Hamilton, Serena Mistry
+									<br /><b>Tools Used: </b>Sketch, Qualtrics
+									<br /><b>Platform: </b>Smartphone Application
 									<br /><b>Project Duration: </b>Oct. 2017 - Present (In Progress)
 									<br />
 									<br />
@@ -68,21 +70,23 @@
 									<br />
 									<br />
 									<h2>Our Solution</h2>
-									We are focusing on developing an augmented reality smartphone app to bring people together in public parks to collaborate on interactive games and tasks. Through creativity and play, we hope to bring diverse groups together to give people a sense of community while reaping the benefits of outdoor activity.
+									We are designing an augmented reality smartphone app to bring people together in public parks to collaborate on interactive games and tasks. Through creativity and play, we hope to bring diverse groups together to give people a sense of community while reaping the benefits of outdoor activity.
 									<br />
 									<br />
 									<span class="image fit">
 									<iframe width="560" height="315" src="https://www.youtube.com/embed/RA9_ZJ65VuE" frameborder="0" allowfullscreen></iframe>
 									</span>
-									<i>Concept video created by Eric Graham</i>
+										<div class="content">
+											<i>Concept Video by Eric Graham</i>
+										</div>	
 									<br />
-									While our concept video used the classic Pacman game since it was quick to incorporate, our actual app will include more collaborative games and activities that will allow people to create things together in order to develop a sense of mutual goals and community.
+									While our concept video was based on the classic Pacman game since it was quick to incorporate, we are designing a new game for our actual project.
 									<br />
 									<br />
 									<h2>Our Process</h2>
 									<b>Ideation</b>
 									<br />
-									To begin the ideation process, we wrote down words that came to us when thinking about "community". We then used them as a starting point for two rounds of "Crazy 8's" sketching to generate concepts. We placed the second round of sketches on the white board and voted on our favorite concepts. After voting, we had a consensus on creating an app for multi-player augmented reality games in public spaces. 
+									We started the ideation process with two rounds of "Crazy 8's" sketching based on the topic of "community". We placed the second round of sketches on the white board and voted on our favorite concepts. After voting, we had a consensus on creating an app for multi-player augmented reality games in public spaces. As a group, we sketched out the high-level game concept and user flow, then Serena Mistry created the wireframes. I combined the printed wireframes with transparency film to create a low-fidelity prototype of an augmented reality smartphone game. 
 									<br />
 									<section class="tiles">
 										<article class="">
@@ -96,38 +100,30 @@
 									</article>
 									<article class="">
 									<span class="image">
-										<img src="images/20171012_212903.jpg" alt="" />
+										<img src="images/low-fidelity prototypes.jpg" alt="" />
 									</span>
 										<h2></h2>
 										<div class="content">
-											<p>Ideating on the Chosen Concept</p>
+											<p>Low-Fidelity Prototype</p>
 										</div>
 									</article>
 									<article class="">
 									<span class="image">
-										<img src="images/Survey Design.png" alt="" />
+										<img src="images/low-fidelity prototype.jpg" alt="" />
 									</span>
 										<h2></h2>
 										<div class="content">
-											<p>Developing Questionnaire Topics</p>
+											<p>Low-Fidelity Prototype in Use</p>
 										</div>
 									</article>
 								</section>
 									<br />
-									We chose our app to be location-based in public parks for several reasons:
-									<ul>
-										<li>It brings people together in a concentrated area so they can form in-person connections as well as virtual connections</li>
-										<li>Being outside contributes to mental and physical health and parks create a feeling of community</li>
-										<li>Almost 70% of people in the country's 100 biggest cities live within a 10 minute walk of a park; we hope to increase utilization of these existing spaces</li>
-										<li>While previous AR apps like Pokemon Go were popular, our app will remove some of its problematic elements (crowds gathering outside of private residences, players not paying attention while crossing streets, etc.)</li>
-									</ul>
+									<h2>User Testing</h2>
+									Bria and I took the low-fidelity protoypes to a local park to do the first round of user testing. We were especially interested in testing the concept of interacting with strangers in a public park as part of the game. Testing the prototype with six people resulted in mixed feedback on the concept. One key finding was that the game needed a storyline that provides enough incentive for people to interact with one another.
+									<br />
+									<br />
 									<h2>Next Steps</h2>
-									<p>Over the next two months we will be designing a questionnaire and analyzing the results, performing interviews, creating a journey map, prototyping, testing and iterating.
-									</p>
-									<b>Project Timeline<p>
-									<span class="image fit">
-										<img src="images/Park Schedule.png" alt="" />
-									</span>
+									We are currently working on a mid-fidelity prototype of the game, which will be tested in a secound round of intercepts at a local park. After incorporating feedback from the second round of user testing, we will create a high-fidelity prototype, which we also plan on testing before creating a final video to demonstrate the completed prototype and concept.
 						</div>
 					</div>
 
