--- a/park.html
+++ b/park.html
@@ -59,7 +59,7 @@
 									<h2>Project Overview</h2>
 									<b>My Role: </b> UX Researcher
 									<br /><b>Group Members: </b>Bria Fowler, Eric Graham, Serena Mistry									
-									<b>Methods Used: </b>Questionnaires, Literature Review, Interviews
+									<br /><b>Methods Used: </b>Questionnaires, Literature Review, Usability Testing
 									<br /><b>Tools Used: </b>Sketch, Qualtrics
 									<br /><b>Platform: </b>Smartphone Application
 									<br /><b>Project Duration: </b>Oct. 2017 - Present (In Progress)
@@ -85,9 +85,9 @@
 									<br />
 									<h2>Our Process</h2>
 									<b>Ideation</b>
-									<br />
+									<p>
 									We started the ideation process with two rounds of "Crazy 8's" sketching based on the topic of "community". We placed the second round of sketches on the white board and voted on our favorite concepts. After voting, we had a consensus on creating an app for multi-player augmented reality games in public spaces. As a group, we sketched out the high-level game concept and user flow, then Serena Mistry created the wireframes. I combined the printed wireframes with transparency film to create a low-fidelity prototype of an augmented reality smartphone game. 
-									<br />
+									</p>
 									<section class="tiles">
 										<article class="">
 										<span class="image">
@@ -119,9 +119,8 @@
 								</section>
 									<br />
 									<h2>User Testing</h2>
-									Bria and I took the low-fidelity protoypes to a local park to do the first round of user testing. We were especially interested in testing the concept of interacting with strangers in a public park as part of the game. Testing the prototype with six people resulted in mixed feedback on the concept. One key finding was that the game needed a storyline that provides enough incentive for people to interact with one another.
-									<br />
-									<br />
+									<p>Bria and I took the low-fidelity protoypes to a local park to do the first round of user testing. We were especially interested in testing the concept of interacting with strangers in a public park as part of the game. Testing the prototype with six people resulted in mixed feedback on the concept. One key finding was that the game needed a storyline that provides enough incentive for people to interact with one another.
+									</p>
 									<h2>Next Steps</h2>
 									We are currently working on a mid-fidelity prototype of the game, which will be tested in a secound round of intercepts at a local park. After incorporating feedback from the second round of user testing, we will create a high-fidelity prototype, which we also plan on testing before creating a final video to demonstrate the completed prototype and concept.
 						</div>
