--- a/park.html
+++ b/park.html
@@ -122,7 +122,7 @@
 									<p>Bria and I took the low-fidelity protoypes to a local park to do the first round of user testing. We were especially interested in testing the concept of interacting with strangers in a public park as part of the game. Testing the prototype with six people resulted in mixed feedback on the concept. One key finding was that the game needed a storyline that provides enough incentive for people to interact with one another.
 									</p>
 									<h2>Next Steps</h2>
-									We are currently working on a mid-fidelity prototype of the game, which will be tested in a secound round of intercepts at a local park. After incorporating feedback from the second round of user testing, we will create a high-fidelity prototype, which we also plan on testing before creating a final video to demonstrate the completed prototype and concept.
+									We are currently working on a mid-fidelity prototype of the game, which will be tested in a secound round of intercepts at a local park. After incorporating feedback from the second round of user testing, we will create a high-fidelity prototype, which we also plan on testing, before creating a final video to demonstrate the completed prototype and concept.
 						</div>
 					</div>
 
