--- a/park.html
+++ b/park.html
@@ -100,7 +100,7 @@
 									</article>
 									<article class="">
 									<span class="image">
-										<img src="images/low-fidelity prototypes.jpg" alt="" />
+										<img src="images/low-fidelity prototypes.JPG" alt="" />
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -109,7 +109,7 @@
 									</article>
 									<article class="">
 									<span class="image">
-										<img src="images/low-fidelity prototype.jpg" alt="" />
+										<img src="images/low-fidelity prototype.JPG" alt="" />
 									</span>
 										<h2></h2>
 										<div class="content">
