--- a/hrc.html
+++ b/hrc.html
@@ -122,7 +122,7 @@
 								<section class="tiles">
 									<article class="">
 									<span class="photo">
-										<img src="images/SoA Archetypes.png" alt="" data-action="zoom"/>
+										<img src="images/SoA Archetypes 2.png" alt="" data-action="zoom"/>
 									</span>	
 									<h2></h2>
 									<div class="content">
@@ -131,7 +131,7 @@
 									</article>
 									<article class="">
 									<span class="photo">
-										<img src="images/SoA Persona.png" alt="" data-action="zoom"/>
+										<img src="images/SoA Persona 2.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -140,7 +140,7 @@
 									</article>
 									<article class="">
 									<span class="photo">
-										<img src="images/Objects.png" alt="" data-action="zoom"/>
+										<img src="images/Objects 2.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -164,7 +164,7 @@
 								<section class="tiles">
 									<article class="">
 									<span class="photo">
-										<img src="images/dh-20170917_007.jpg" alt="" data-action="zoom"/>
+										<img src="images/Site Visit.png" alt="" data-action="zoom"/>
 									</span>	
 									<h2></h2>
 									<div class="content">
@@ -173,7 +173,7 @@
 									</article>
 									<article class="">
 									<span class="photo">
-										<img src="images/20170920_113134.jpg" alt="" data-action="zoom"/>
+										<img src="images/Journey Map Board.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -182,7 +182,7 @@
 									</article>
 									<article class="">
 									<span class="photo">
-										<img src="images/20171021_152436.jpg" alt="" data-action="zoom"/>
+										<img src="images/Journey Map.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -204,7 +204,7 @@
 								<section class="tiles">
 									<article class="">
 									<span class="photo">
-										<img src="images/Welcome Sketch.jpg" alt="" data-action="zoom"/>
+										<img src="images/Welcome Sketch 2.png" alt="" data-action="zoom"/>
 									</span>	
 									<h2></h2>
 									<div class="content">
@@ -213,7 +213,7 @@
 									</article>
 									<article class="">
 									<span class="photo">
-										<img src="images/Welcome Screen 1.png" alt="" data-action="zoom"/>
+										<img src="images/First Welcome Screen.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -222,7 +222,7 @@
 									</article>
 									<article class="">
 									<span class="photo">
-										<img src="images/Welcome Screen 2.png" alt="" data-action="zoom"/>
+										<img src="images/Second Welcome Screen.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -240,7 +240,7 @@
 								<section class="tiles">
 									<article class="">
 									<span class="photo">
-										<img src="images/20171009_175353.jpg" alt="" data-action="zoom"/>
+										<img src="images/Participant.png" alt="" data-action="zoom"/>
 									</span>	
 									<h2></h2>
 									<div class="content">
@@ -249,7 +249,7 @@
 									</article>
 									<article class="">
 									<span class="photo">
-										<img src="images/20171009_175803.jpg" alt="" data-action="zoom"/>
+										<img src="images/Painting.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -258,7 +258,7 @@
 									</article>
 									<article class="">
 									<span class="photo">
-										<img src="images/20171009_175630.jpg" alt="" data-action="zoom"/>
+										<img src="images/Participant 2.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
 										<div class="content">
