--- a/charterschool.html
+++ b/charterschool.html
@@ -58,7 +58,7 @@
 							<span class="image main"><img src="images/school header.png" alt="" /></span>
 									<h2>Project Overview</h2>
 									<b>Role: </b>UX Researcher
-									<br /><b>Methods Used: </b>Stakeholder and User Interviews, Affinity Diagrams
+									<br /><b>Methods Used: </b>Stakeholder and User Interviews
 									<br /><b>Project Duration: </b>Aug. 2017 - Present (In Progress)
 									<br />
 									<br />
