--- a/charterschool.html
+++ b/charterschool.html
@@ -57,7 +57,7 @@
 							<h2>Redesigned Workflows and Tools</h2>
 							<span class="image main"><img src="images/school header.png" alt="" /></span>
 									<h2>Project Overview</h2>
-									<b>Role: </b>UX Researcher
+									<b>My Role: </b>UX Researcher
 									<br /><b>Methods Used: </b>Stakeholder and User Interviews
 									<br /><b>Project Duration: </b>Aug. 2017 - Present (In Progress)
 									<br />
