--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>Contact Me</h2>
+								<h2>Contact</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon style2 fa-twitter"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+									<li><a href="https://www.linkedin.com/in/dixiehamilton/" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="mailto:dixie.hamilton@gmail.com" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
