--- a/hrc.html
+++ b/hrc.html
@@ -58,7 +58,7 @@
 							<h2>Interactive Museum Experience</h2>
 							<span class="image main"><img src="images/IMG_20170917_144220.vr.jpg" alt="" data-action="zoom"/></span>
 									<h2>Project Overview</h2>
-									<b>Role: </b>UX Researcher
+									<b>My Role: </b>UX Researcher
 									<br /><b>Methods Used: </b>Intercepts, Journey Mapping, Usability Testing, Wireframing, Prototyping
 									<br /><b>Tools Used: </b>Sketch, Invision
 									<br /><b>Platform: </b>RFID Wristband and Sensors, iPad Application, Website
@@ -281,7 +281,7 @@
 											<li>The ability to bookmark objects could lessen the number of visitors taking photographs of objects (flash photography is not allowed)</li>
 										</ul>
 								<h2>Next Steps</h2>
-									We are currently finalizing our iPad app prototype and completing a video to demonstrate the wristband experience. 
+									We are currently completing a video to demonstrate the wristband experience. 
 						</div>
 					</div>
 
