--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/KIPP main.png" alt="" />
+										<img src="images/KIPP main 2.png" alt="" />
 									</span>
 									<a href="charterschool.html">
 										<h2>KIPP Austin Public Schools</h2>
