--- a/hrc.html
+++ b/hrc.html
@@ -88,7 +88,7 @@
 								<b>Final Prototypes of iPad and Website Experiences</b>
 								<section class="tiles">
 									<article class="">
-									<span class="photo">
+									<span class="image">
 										<img src="images/HRC Welcome.png" alt="" data-action="zoom"/>
 									</span>	
 									<h2></h2>
@@ -97,7 +97,7 @@
 									</div>
 									</article>
 									<article class="">
-									<span class="photo">
+									<span class="image">
 										<img src="images/HRC AR Vase.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
@@ -106,7 +106,7 @@
 										</div>
 									</article>
 									<article class="">
-									<span class="photo">
+									<span class="image">
 										<img src="images/HRC Phone.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
@@ -121,7 +121,7 @@
 									<p>Our class was provided with existing research, including archetypes and personas, on which to base our concepts. We chose to focus on the "Weekender" archetype: a person who is familiar with the topic of the exhibit and who likes to explore and learn about each object.</p>
 								<section class="tiles">
 									<article class="">
-									<span class="photo">
+									<span class="image">
 										<img src="images/SoA Archetypes 2.png" alt="" data-action="zoom"/>
 									</span>	
 									<h2></h2>
@@ -130,7 +130,7 @@
 									</div>
 									</article>
 									<article class="">
-									<span class="photo">
+									<span class="image">
 										<img src="images/SoA Persona 2.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
@@ -139,7 +139,7 @@
 										</div>
 									</article>
 									<article class="">
-									<span class="photo">
+									<span class="image">
 										<img src="images/Objects 2.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
@@ -163,7 +163,7 @@
 									</ul>
 								<section class="tiles">
 									<article class="">
-									<span class="photo">
+									<span class="image">
 										<img src="images/Site Visit.png" alt="" data-action="zoom"/>
 									</span>	
 									<h2></h2>
@@ -172,7 +172,7 @@
 									</div>
 									</article>
 									<article class="">
-									<span class="photo">
+									<span class="image">
 										<img src="images/Journey Map Board.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
@@ -181,7 +181,7 @@
 										</div>
 									</article>
 									<article class="">
-									<span class="photo">
+									<span class="image">
 										<img src="images/Journey Map.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
@@ -203,7 +203,7 @@
 							-->
 								<section class="tiles">
 									<article class="">
-									<span class="photo">
+									<span class="image">
 										<img src="images/Welcome Sketch 2.png" alt="" data-action="zoom"/>
 									</span>	
 									<h2></h2>
@@ -212,7 +212,7 @@
 									</div>
 									</article>
 									<article class="">
-									<span class="photo">
+									<span class="image">
 										<img src="images/First Welcome Screen.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
@@ -221,7 +221,7 @@
 										</div>
 									</article>
 									<article class="">
-									<span class="photo">
+									<span class="image">
 										<img src="images/Second Welcome Screen.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
@@ -239,7 +239,7 @@
 									<br />
 								<section class="tiles">
 									<article class="">
-									<span class="photo">
+									<span class="image">
 										<img src="images/Participant.png" alt="" data-action="zoom"/>
 									</span>	
 									<h2></h2>
@@ -248,7 +248,7 @@
 									</div>
 									</article>
 									<article class="">
-									<span class="photo">
+									<span class="image">
 										<img src="images/Painting.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
@@ -257,7 +257,7 @@
 										</div>
 									</article>
 									<article class="">
-									<span class="photo">
+									<span class="image">
 										<img src="images/Participant 2.png" alt="" data-action="zoom"/>
 									</span>
 										<h2></h2>
