--- a/hrc.html
+++ b/hrc.html
@@ -62,7 +62,7 @@
 									<br /><b>Methods Used: </b>Intercepts, Journey Mapping, Usability Testing, Wireframing, Prototyping
 									<br /><b>Tools Used: </b>Sketch, Invision
 									<br /><b>Platform: </b>RFID Wristband and Sensors, iPad Application, Website
-									<br /><b>Group Members: </b>Bria Fowler, Dixie Hamilton, Serena Mistry, Tim Salau
+									<br /><b>Group Members: </b>Bria Fowler, Serena Mistry, Tim Salau
 									<br /><b>Project Duration: </b>Sep. 2017 - Present (In Progress)
 									<br />
 									<br />
