--- a/hrc.html
+++ b/hrc.html
@@ -56,7 +56,7 @@
 						<div class="inner">
 							<h1>Harry Ransom Center</h1>
 							<h2>Interactive Museum Experience</h2>
-							<span class="image main"><img src="images/IMG_20170917_144220.vr.jpg" alt="" data-action="zoom"/></span>
+							<span class="image main"><img src="images/IMG_20170917_144220.vr.jpg" alt=""/></span>
 									<h2>Project Overview</h2>
 									<b>My Role: </b>UX Researcher
 									<br /><b>Methods Used: </b>Intercepts, Journey Mapping, Usability Testing, Wireframing, Prototyping
@@ -82,14 +82,14 @@
 									</ul>
 									<b>Visitor Journey Incorporating Wristband Concept</b>
 									<div class="value-img">
-										<img src="images/SoA Horizontal User Flow2.png" alt="" data-action="zoom" data-original="images/SoA Horizontal User Flow2.png"/>
+										<img src="images/SoA Horizontal User Flow2.png" alt="" data-original="images/SoA Horizontal User Flow2.png"/>
 									<!--<figcaption>HRC Visitor Flow. Graphic design by Serena Mistry.</figcaption>-->
 									</div>
 								<b>Final Prototypes of iPad and Website Experiences</b>
 								<section class="tiles">
 									<article class="">
 									<span class="photo">
-										<img src="images/HRC Welcome.png" alt="" data-action="zoom"/>
+										<img src="images/HRC Welcome.png" alt="" />
 									</span>	
 									<h2></h2>
 									<div class="content">
@@ -98,7 +98,7 @@
 									</article>
 									<article class="">
 									<span class="photo">
-										<img src="images/HRC AR Vase.png" alt="" data-action="zoom"/>
+										<img src="images/HRC AR Vase.png" alt="" />
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -107,7 +107,7 @@
 									</article>
 									<article class="">
 									<span class="photo">
-										<img src="images/HRC Phone.png" alt="" data-action="zoom"/>
+										<img src="images/HRC Phone.png" alt="" />
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -122,7 +122,7 @@
 								<section class="tiles">
 									<article class="">
 									<span class="photo">
-										<img src="images/SoA Archetypes 2.png" alt="" data-action="zoom"/>
+										<img src="images/SoA Archetypes 2.png" alt="" />
 									</span>	
 									<h2></h2>
 									<div class="content">
@@ -131,7 +131,7 @@
 									</article>
 									<article class="">
 									<span class="photo">
-										<img src="images/SoA Persona 2.png" alt="" data-action="zoom"/>
+										<img src="images/SoA Persona 2.png" alt="" />
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -140,7 +140,7 @@
 									</article>
 									<article class="">
 									<span class="photo">
-										<img src="images/Objects 2.png" alt="" data-action="zoom"/>
+										<img src="images/Objects 2.png" alt="" />
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -164,7 +164,7 @@
 								<section class="tiles">
 									<article class="">
 									<span class="photo">
-										<img src="images/Site Visit.png" alt="" data-action="zoom"/>
+										<img src="images/Site Visit.png" alt="" />
 									</span>	
 									<h2></h2>
 									<div class="content">
@@ -173,7 +173,7 @@
 									</article>
 									<article class="">
 									<span class="photo">
-										<img src="images/Journey Map Board.png" alt="" data-action="zoom"/>
+										<img src="images/Journey Map Board.png" alt="" />
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -182,7 +182,7 @@
 									</article>
 									<article class="">
 									<span class="photo">
-										<img src="images/Journey Map.png" alt="" data-action="zoom"/>
+										<img src="images/Journey Map.png" alt="" />
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -204,7 +204,7 @@
 								<section class="tiles">
 									<article class="">
 									<span class="photo">
-										<img src="images/Welcome Sketch 2.png" alt="" data-action="zoom"/>
+										<img src="images/Welcome Sketch 2.png" alt="" />
 									</span>	
 									<h2></h2>
 									<div class="content">
@@ -213,7 +213,7 @@
 									</article>
 									<article class="">
 									<span class="photo">
-										<img src="images/First Welcome Screen.png" alt="" data-action="zoom"/>
+										<img src="images/First Welcome Screen.png" alt="" />
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -222,7 +222,7 @@
 									</article>
 									<article class="">
 									<span class="photo">
-										<img src="images/Second Welcome Screen.png" alt="" data-action="zoom"/>
+										<img src="images/Second Welcome Screen.png" alt="" />
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -240,7 +240,7 @@
 								<section class="tiles">
 									<article class="">
 									<span class="photo">
-										<img src="images/Participant.png" alt="" data-action="zoom"/>
+										<img src="images/Participant.png" alt="" />
 									</span>	
 									<h2></h2>
 									<div class="content">
@@ -249,7 +249,7 @@
 									</article>
 									<article class="">
 									<span class="photo">
-										<img src="images/Painting.png" alt="" data-action="zoom"/>
+										<img src="images/Painting.png" alt="" />
 									</span>
 										<h2></h2>
 										<div class="content">
@@ -258,7 +258,7 @@
 									</article>
 									<article class="">
 									<span class="photo">
-										<img src="images/Participant 2.png" alt="" data-action="zoom"/>
+										<img src="images/Participant 2.png" alt="" />
 									</span>
 										<h2></h2>
 										<div class="content">
