--- a/park.html
+++ b/park.html
@@ -90,7 +90,7 @@
 									</p>
 									<section class="tiles">
 										<article class="">
-										<span class="image">
+										<span class="photo">
 											<img src="images/20171010_205224.jpg" alt="" />
 										</span>	
 									<h2></h2>
@@ -99,7 +99,7 @@
 									</div>
 									</article>
 									<article class="">
-									<span class="image">
+									<span class="photo">
 										<img src="images/low-fidelity prototypes.JPG" alt="" />
 									</span>
 										<h2></h2>
@@ -108,7 +108,7 @@
 										</div>
 									</article>
 									<article class="">
-									<span class="image">
+									<span class="photo">
 										<img src="images/low-fidelity prototype.JPG" alt="" />
 									</span>
 										<h2></h2>
