--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/HRC main.png" alt="" />
+										<img src="images/HRC main.png" alt="Two people looking at a museum exhibit" />
 									</span>
 									<a href="hrc.html">
 										<h2>Harry Ransom Center</h2>
@@ -70,7 +70,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pARk main.png" alt="" />
+										<img src="images/pARk main.png" alt="Someone holding a paper prototype of a smartphone game" />
 									</span>
 									<a href="park.html">
 										<h2>pARk</h2>
@@ -81,7 +81,7 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/KIPP main 2.png" alt="" />
+										<img src="images/KIPP main 2.png" alt="An apple on a school desk" />
 									</span>
 									<a href="charterschool.html">
 										<h2>KIPP Austin Public Schools</h2>
