--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
 									</span>
 									<a href="hrc.html">
 										<h2>Harry Ransom Center</h2>
-										<div class="content">
 											<p>Rapid Prototyping</p>
-										</div>
+									<!--	<div class="content">
+											<p>Rapid Prototyping</p>
+										</div>-->
 									</a>
 								</article>
 								<article class="style2">
@@ -74,9 +75,10 @@
 									</span>
 									<a href="park.html">
 										<h2>pARk</h2>
-										<div class="content">
+										<p>Interaction Design</p>
+									<!--	<div class="content">
 											<p>Interaction Design</p>
-										</div>
+										</div>-->
 									</a>
 								</article>
 								<article class="style3">
@@ -85,9 +87,10 @@
 									</span>
 									<a href="charterschool.html">
 										<h2>KIPP Austin Public Schools</h2>
-										<div class="content">
+										<p>User Research</p>
+									<!--<div class="content">
 											<p>User Research</p>
-										</div>
+										</div>-->
 									</a>
 								</article>
 								<!-- Unused Project Images
